<resources>
    <string name="app_name">Emergencias Coatza</string>

    <string name="permission_txt">Hola y bienvenido, para poder contar con un funciónamiento adecuado de la app, necesitamos que apruebes los siguientes permisos, descuida, no haremos uso indebido de ellos:</string>
    <string name="permission_one_txt">  Acceso a la localización</string>
    <string name="permission_two_txt">  Permitir realizar llamadas alos números de emergencia</string>
    <string name="ok_txt">Enterado</string>
    <string name="maybe_later_txt">Tal vez despues</string>

    <string name="tab_resume">Números</string>
    <string name="tab_map">Mapa</string>

    <string name="action_search">Search</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name = "menu_principal">Inicio</string>
    <string name = "menu_acerca">Acerca de</string>
    <string name = "menu_ayuda">Ayuda</string>
    <string name = "menu_compartir">Compartir App</string>
    <string name = "menu_configuracion">Configuración</string>
    <string name="checkin">Checkin</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="notice">Sincronizado con la ultima versión</string>

    <string name="description">Información</string>
    <string name="category">Categoria</string>
    <string name="refresh">¡Directorio actualizado!</string>
    <string name ="update">Última vez que se verificó</string>
    <string name="please">Por favor, si usted detecta que algún número no corresponde con la dependencia, reportelo para que lo actualicemos.</string>
    <string name="missing_phone">Reportar número</string>
    <string name="view_map">Ver en mapa</string>

    <!--    Permissions    -->
    <string name="permission_required_phone">Permiso para ocupar el télefono</string>
    <string name="permission_rationale_location">Es necesario acceder a los servicios de localización para poder ubicar en el mapa \'tu localización\' y poder ver la distancia con otros puntos.</string>
    <string name="location_permission_denied">Esta app necesita acceder a \'tu localización\'. Por favor intenta nuevamente y otorga el permiso de localización requerido.\nSi el permiso a sido revocado, puede ser activado en configuraciones del sistema &gt; Apps &gt; \'Emergencias Coatza\'.</string>
    <string name="permission_required_toast">Se requiere de los permisos de localización para ocupar esta app.</string>

    <string name="phone_numbers">N° Emergencia</string>
    <string name="phone_cruzroja">Cruz Roja</string>
    <string name="phone_number_cruzroja1">21 4 04 05</string>
    <string name="phone_number_cruzroja2">21 4 04 34</string>
    <string name="phone_number_cruzroja3">21 4 04 35</string>
    <string name="phone_valentingomez">Hospital Regional Valentin Gomez Farias</string>
    <string name="phone_number_valentingomez1">21 2 51 12</string>
    <string name="phone_number_valentingomez2">21 2 51 50</string>
    <string name="phone_number_valentingomez3">21 2 54 38</string>
    <string name="phone_villaallende">Hospital Comunitario de Villa Allende</string>
    <string name="phone_number_villaallende1">21 3 22 02</string>
    <string name="phone_number_villaallende2">21 3 23 06</string>
    <string name="phone_number_villaallende3">21 3 23 07</string>
    <string name="phone_civil">Protección Civil, Bomberos y Policía Turística</string>
    <string name="phone_number_civil1">21 4 96 44</string>
    <string name="phone_number_civil2">21 2 51 41</string>
    <string name="phone_number_civil3">21 4 04 35</string>
    <string name="phone_naval">Policia Naval</string>
    <string name="phone_number_naval1">21 4 10 06</string>
    <string name="phone_number_naval2">21 4 11 08</string>
    <string name="phone_federal">Policia Federal</string>
    <string name="phone_number_federal1">21 4 64 05</string>
    <string name="phone_number_federal2">21 4 64 16</string>
    <string name="phone_transito">Delegación de Tránsito</string>
    <string name="phone_number_transito1">21 4 29 10</string>
    <string name="phone_number_transito2">21 4 29 10</string>
    <string name="phone_emergencias">Emergencias</string>
    <string name="phone_number_emergencias1">006</string>
    <string name="phone_number_emergencias2">911</string>
    <string name="phone_cmas">CMAS Fugas</string>
    <string name="phone_number_cmas">16 3 63 00</string>
    <string name="phone_cfe">CFE Reportes</string>
    <string name="phone_number_cfe1">071</string>
    <string name="phone_number_cfe2">21 2 57 22</string>


    <string name="str_no">Si</string>
    <string name="str_yes">No</string>
    <string name="toast_PressAgain">Presiona nuevamente para salir de la aplicación</string>
    <string name="txt_exit_message">Salir?</string>
    <string name="txt_title_exit">¿Salir de la aplicación?</string>
    <string name="nav_about_us">Acerca de nosotros</string>
    <string name="nav_feedback">Sugerencias</string>

    <string name="banner_home_footer">ca-app-pub-7418223157292725/6675168891</string>
    <string name="hint_phone">Número telefónico</string>
    <string name="contact">Contacto</string>
    <string name="about">Acerca de nosotros</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="description_detail">"Emergencias Coatza es una App que contiene los números importantes de la ciudad de Coatzacoalcos en caso de emergencia, <b>los números no pertenecen a Emergencias Coatza</b> sino a cada una de las dependencias listadas. <b>Por favor no hagas uso indebido de ellos.</b>\n\n Ayudanos a difundir la aplicación al compartirla, todos podemos tener una emergencia. \n\n Los números en caso de que no cuentes con Internet quedaran almacenados en la aplicación, cuando cuentes con Internet se volvera a realizar la sincronización con la ultima versión de nuestro directorio.\n"</string>
    <string name="about_comments">Sugerencias</string>
    <string name="about_portafolio">Ver mis trabajos</string>

    <string name="action_settings">Settings</string>
    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
    <string name="feedback_email">luisgabrieltaylor@gmail.com</string>
    <string name="feedback_subject">Sugerencias para Emergencias Coatza</string>
    <string name="send_feedback">Enviar sugerencias</string>

    <string name="action_map">Mapa</string>
    <string name="map_normal">Normal</string>
    <string name="map_terrain">Terreno</string>
    <string name="map_hybrid">Hibrido</string>
    <string name="map_satellite">Satelite</string>
</resources>
